Made some comments in extra.html

--- a/extra.html
+++ b/extra.html
@@ -56,6 +56,7 @@
           <li>Handcraft</li>
         </ul>
       </div>
+      <!-- I will complete this later-->
       <div class="middle" style="background-color: #e0c09f;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ligula purus, aliquam a lorem non, tristique finibus neque. Ut molestie et massa et feugiat. Suspendisse tincidunt massa a hendrerit tempus. Suspendisse tempor suscipit ultrices. Aenean sodales lacus eu gravida pretium. Ut ante magna, congue ut ligula vel, tristique vehicula nisl. Etiam egestas sapien ut tellus feugiat tempus. Mauris dapibus fringilla ultricies. Sed tristique, dui sed condimentum tristique, magna tellus tempor mi, a volutpat ante urna ut tellus. Sed congue velit mauris, a posuere ligula pellentesque vel. Suspendisse sed turpis turpis. Fusce varius posuere mi vel porttitor. Aliquam a semper urna, quis rutrum arcu.</div>  
       <div class="right" style="background-color: #e0c09f;">
         <h2>Countries I've been to</h2>
@@ -89,6 +90,7 @@
         </ul>
       </div>
         <div class="footer">
+          <!--I will finish it tonight as well-->
           <p>Footer</p>
       </div>
     </div>
