--- a/timeline.html
+++ b/timeline.html
@@ -140,38 +140,77 @@
         left: 0%;
         }
       }
-      ul {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          width: 200px;
+      /* Nav bar**/
+        .topnav {
+          overflow: hidden;
           background-color: #e0c09f;
         }
 
-      li a {
-        display: block;
-        color: #1d1919;
-        padding: 8px 16px;
-        text-decoration: none;
-      }
+        .topnav a {
+          float: left;
+          display: block;
+          color: #1d1919;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+        }
 
-      li a.active {
-        background-color: #b16e2b;
-        color: #1d1919;
-      }
+        .topnav a:hover {
+          background-color: #ddd;
+          color: black;
+        }
 
-      li a:hover:not(.active) {
-        background-color: #e0c09f;
-        color: #1d1919;
-      }
+        .topnav a.active {
+          background-color: #b16e2b;
+          color: white;
+        }
+
+        .topnav .icon {
+          display: none;
+        }
+        /* Responsive topnav **/
+        @media screen and (max-width: 600px) {
+          .topnav a:not(:first-child) {display: none;}
+          .topnav a.icon {
+            float: right;
+            display: block;
+          }
+        }
+
+        @media screen and (max-width: 600px) {
+          .topnav.responsive {position: relative;}
+          .topnav.responsive .icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+          }
+          .topnav.responsive a {
+            float: none;
+            display: block;
+            text-align: left;
+          }
+        }
       </style>
   </head>
   <body>
-    <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li class="active"><a href="timeline.html" class="active">WALKING THROUGH LIFE</a></li>
-      <li><a href="extra.html">EXTRA</a></li>
-    </ul>
+    <header>
+      <div class="topnav" id="myTopnav">
+          <a href="index.html">HOME</a>
+          <a href="timeline.html" class="active">WALKING THROUGH LIFE</a>
+          <a href="extra.html">EXTRA</a>
+      </div>
+      <script>
+        function myFunction() {
+          var x = document.getElementById("myTopnav");
+          if (x.className === "topnav") {
+            x.className += " responsive";
+          } else {
+            x.className = "topnav";
+          }
+        }
+      </script> 
+    </header>
       
     <div class="timeline">
       <div class="container left">
