Added h2 to timeline.

--- a/extra.html
+++ b/extra.html
@@ -30,6 +30,7 @@
       <div class="left" style="background-color: #e0c09f;">
         <h2>Things I like</h2>
         <ul>
+          <li>Learning new things</li>
           <li>Rock music</li>
           <li>The Moon</li>
           <li>Green color</li>
@@ -46,7 +47,7 @@
           <li>Things being planned in advance</li>
           <li>Challenging tasks</li>
           <li>"Friends" TV series</li>
-          <li>Movies, documentaries, TV series, books about mental ilnesses, especially about personality disorder</li>
+          <li>Learning about personality disorders</li>
           <li>Honest, responsible, hardworking people</li>
           <li>Tulips</li>
           <li>Baking pies</li>
@@ -69,7 +70,7 @@
           <li>Turkey</li>
           <li>Singapore</li>
         </ul>
-        <br/>
+        
         <h2>Countries I want to visit</h2>
         <ul>
           <li>Switzerland</li>
@@ -82,8 +83,6 @@
           <li>United Kingdom</li>
           <li>Norway</li>
           <li>Finland</li>
-          <li>Georgia</li>
-          <li>Brazil</li>
           <li>Australia</li>
           <li>USA</li>
           <li>Japan</li>
