--- a/timeline.html
+++ b/timeline.html
@@ -16,6 +16,10 @@
         color: #1d1919;
       }
       
+      h2 {
+        text-align: center;
+        color: #b16e2b;
+      }
       /* The actual timeline (the vertical ruler) */
       .timeline {
         position: relative;
@@ -211,7 +215,9 @@
         }
       </script> 
     </header>
-      
+    <div>
+      <h2>Please acknoledge some of the highlights of my life presented here in this pretty timeline</h2>
+    </div>  
     <div class="timeline">
       <div class="container left">
         <div class="content">
