--- a/timeline.html
+++ b/timeline.html
@@ -234,7 +234,7 @@
       <div class="container left">
         <div class="content">
           <h4>2014-2016</h4>
-          <p>Taking my master's degree in Fiscal-financial Law at Master School of Excellence in Economics and Business of ASEM. That was an important experience, as I learned I pretty much enjoy studying law. As a result, during the second year of studying at ASEM I paralelly applied to USM's General Law Faculty, but I dropped after the first year because of lack of time, being unable to combine my job with those complex studies at ASEM and USM. </p>
+          <p>Taking my master's degree in Fiscal-financial Law at Master School of Excellence in Economics and Business of ASEM. That was an important experience, as I learned I pretty much enjoy studying law. As a result, during the second year of studying at ASEM I paralelly applied to USM's General Law Faculty, but I dropped out after the first year because of lack of time, being unable to combine my job with those complex studies at ASEM and USM. </p>
         </div>
       </div>
       <div class="container right">
