--- a/index.html
+++ b/index.html
@@ -54,5 +54,10 @@
         }
         </script>
     </section>
+    <audio controls>
+      <source src="queen" type="audio/mp3">
+      <source src="horse.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio>
   </body>
 </html>
