Added audios to the main folder.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
         </script>
     </section>
     <audio controls>
-      <source src="queen" type="audio/mp3">
-      <source src="horse.mp3" type="audio/mpeg">
+      <source src="queen.mp3" type="audio/mp3">
     Your browser does not support the audio element.
     </audio>
   </body>
