Added a video to extra.html.

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         }
         </script>
     </section>
-    <audio controls>
-      <source src="queen.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
-    </audio>
+    <div  id="backgroundMusic">
+      <audio id="backgroundMusic" style="position:fixed; top:-100px;" autoplay="true" controls>
+        <source src="queen.mp3" type="audio/mp3">
+      </audio>
   </body>
 </html>
