The last changes, responsive video, padding and margins of grid.

--- a/extra.html
+++ b/extra.html
@@ -59,8 +59,12 @@
       </div>
       
       <div class="middle" style="background-color: #e0c09f;">
-        <iframe width="420" height="345" src="">
-        </iframe>
+        <h2 style="text-align: center">Check out my favorite short-film!</h2>
+        <br/>
+        <video width="740" height="440" controls>
+          <source src="videoplayback.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>  
       <div class="right" style="background-color: #e0c09f;">
         <h2>Countries I've been to</h2>
@@ -92,8 +96,7 @@
         </ul>
       </div>
         <div class="footer">
-          <!--I will finish it tonight as well-->
-          <p>Footer</p>
+          <p>Elena Danilova &copy; 2020</p>
       </div>
     </div>
   </body>
